feat: html structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
 </head>
 
 <body>
+    <main>
+        <section class="card">
+            <div>
+
+                <section class="person">
+
+                    <section class="person__picture">
+
+                    </section>
+                    <div>
+
+                        <section class="person__name">
+                            <h1>Karol Skalutki</h1>
+                        </section>
+
+                        <section class="person__title">
+                            Junior-junior frontend
+                        </section>
+
+                        <p>
+                            Programista z brakiem doświadczenia, fotograf amator, właściciel Buggati Vintage (na razie tylko z Lego), Programiosta CNC i szkoleniowiec. Uwielbia grać na komputeże, i oglądać wyścigi Formuły pierwszej
+                        </p>
+
+                        <p>
+                            W sieci: Facebook, GitHub, Instagram.
+                        </p>
+
+
+                    </div>
+
+                </section>
+
+        </section>
+    </main>
 
 </body>
 
