--- a/index.html
+++ b/index.html
@@ -10,39 +10,27 @@
 </head>
 
 <body>
-    <main>
-        <section class="card">
+    <main class="card">
+        <section class="person">
+            <img src="img/avatar.png" alt="Usmiechniete zdjecie Korsiego" class="person__photo">
             <div>
+                <header class="person__header">
+                    <h1 class="person__name">Karol Skalutki</h1>
+                    <span class="person__title">Junior-junior frontend</span>
+                </header>
+                <p class="person__description">
+                    Programista z <strong class="person__description--strong">brakiem doświadczenia</strong>, fotograf amator, właściciel Buggati Vintage (na razie tylko z Lego), <strong class="person__description--strong">Programiosta CNC i szkoleniowiec.</strong>                    Uwielbia grać na komputeże, i oglądać wyścigi Formuły pierwszej
+                </p>
+                <p class="person__description person__description--last">
 
-                <section class="person">
-
-                    <section class="person__picture">
-
-                    </section>
-                    <div>
-
-                        <section class="person__name">
-                            <h1>Karol Skalutki</h1>
-                        </section>
-
-                        <section class="person__title">
-                            Junior-junior frontend
-                        </section>
-
-                        <p>
-                            Programista z brakiem doświadczenia, fotograf amator, właściciel Buggati Vintage (na razie tylko z Lego), Programiosta CNC i szkoleniowiec. Uwielbia grać na komputeże, i oglądać wyścigi Formuły pierwszej
-                        </p>
-
-                        <p>
-                            W sieci: Facebook, GitHub, Instagram.
-                        </p>
+                    W sieci: <a href=# class="person__description--link">Facebook</a>, <a href=# class="person__description--link">GitHub</a>, <a href=# class="person__description--link">Instagram</a>.
+                </p>
 
 
-                    </div>
-
-                </section>
+            </div>
 
         </section>
+
     </main>
 
 </body>
