--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 <body>
     <main class="card">
         <section class="person">
-            <img src="img/avatar.png" alt="Usmiechniete zdjecie Korsiego" class="person__photo">
+            <img src="img/avatar.png" alt="Usmiechniete zdjecie Karola w kapeluszu." class="person__photo">
             <div>
                 <header class="person__header">
-                    <h1 class="person__name">Karol Skalutki</h1>
+                    <h1 class="person__name">Karol Skalinski</h1>
                     <span class="person__title">Junior-junior frontend</span>
                 </header>
                 <p class="person__description">
-                    Programista z <strong class="person__description--strong">brakiem doświadczenia</strong>, fotograf amator, właściciel Buggati Vintage (na razie tylko z Lego), <strong class="person__description--strong">Programiosta CNC i szkoleniowiec.</strong>                    Uwielbia grać na komputeże, i oglądać wyścigi Formuły pierwszej
+                    Programista z <strong class="person__description--strong">brakiem doświadczenia</strong>, fotograf amator, właściciel Buggati Chiron (na razie tylko z Lego), <strong class="person__description--strong">Programista CNC.</strong> Uwielbia
+                    grać na komputeże, i oglądać wyścigi Formuły 1.
                 </p>
                 <p class="person__description person__description--last">
 
-                    W sieci: <a href=# class="person__description--link">Facebook</a>, <a href=# class="person__description--link">GitHub</a>, <a href=# class="person__description--link">Instagram</a>.
+                    W sieci: <a href="https://facebook.com/karol.skalutki?ref=bookmarks" class="person__description--link">Facebook</a>, <a href="https://github.com/skalutki" class="person__description--link">GitHub</a>, <a href="https://linkedin.com/in/karol-skalinski-057591b1/"
+                        class="person__description--link">Linkedin</a>.
                 </p>
 
 
