--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="card">
         <section class="person">
-            <img src="img/avatar.png" alt="Usmiechniete zdjecie Karola w kapeluszu." class="person__photo">
+            <img src="img/avatar.jpg" alt="Usmiechniete zdjecie Karola w kapeluszu." class="person__photo">
             <div>
                 <header class="person__header">
                     <h1 class="person__name">Karol Skalinski</h1>
